--- a/assets/css/piroll.css
+++ b/assets/css/piroll.css
@@ -95,7 +95,7 @@ a {
 
 a:focus,
 a:hover {
-    color: #0c9a95;
+    color: #640A00;
 }
 #video12 {
     width:100%;
@@ -423,7 +423,8 @@ html {
 }
 
 body {
-    font-family: "Nunito Sans", sans-serif;
+font-family: 'Noto Sans JP', sans-serif;
+font-weight: 300;
     line-height: 1.65;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -439,10 +440,10 @@ strong {
 }
 
 div.lead {
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: 1.68rem;
     line-height: 1.45;
-    color: #171717;
+    color: #000000;
 }
 
 div.lead-sm {
@@ -451,7 +452,7 @@ div.lead-sm {
 
 /* font like on headings */
 .nk-heading-font {
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     letter-spacing: .02em;
 }
 
@@ -469,7 +470,7 @@ h5,
 h6,
 .h6 {
     margin-bottom: 1rem;
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-weight: 500;
     color: #171717;
 }
@@ -478,7 +479,7 @@ font-family: 'Lato', sans-serif;
 .display-2,
 .display-3,
 .display-4 {
-font-family: 'Lato', sans-serif;
+font-family: 'Noto Sans JP', sans-serif;
     font-weight: 500;
     color: #171717;
 }
@@ -3569,7 +3570,7 @@ img.rounded {
 .nk-navbar {
     position: relative;
     padding: 33px 0;
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: .9rem;
     transition: .3s background-color;
     z-index: 1000;
@@ -3610,7 +3611,7 @@ font-family: 'Lato', sans-serif;
 }
 
 .nk-navbar, .nk-navbar.nk-navbar-solid {
-    background-color: #2d0500;
+    background: radial-gradient(#630a00,#000);
 }
 
 .nk-navbar.nk-navbar-transparent-always {
@@ -4041,7 +4042,7 @@ font-family: 'Lato', sans-serif;
 .nk-navbar-full .nk-nav > li:last-of-type > a,
 .nk-navbar-full .nk-nav > li > a {
     padding: 11px 80px;
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: 1.6rem;
     line-height: 1.1;
     color: #d8d8d8;
@@ -4359,7 +4360,7 @@ font-family: 'Lato', sans-serif;
 .nk-btn {
     display: inline-block;
     padding: 20px 25px;
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: .8rem;
     font-weight: 500;
     line-height: 1.2;
@@ -4445,7 +4446,7 @@ font-family: 'Lato', sans-serif;
     position: relative;
     display: inline-block;
     padding: 0 3px;
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: .8rem;
     font-weight: 500;
     color: #171717;
@@ -4503,7 +4504,7 @@ font-family: 'Lato', sans-serif;
 
 .nk-progress .nk-progress-title {
     margin-bottom: 13px;
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: .8rem;
     font-weight: 500;
     color: #171717;
@@ -4565,7 +4566,7 @@ font-family: 'Lato', sans-serif;
 .nk-tabs .nav-tabs .nav-link {
     position: relative;
     padding: 10px 17px;
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: .85rem;
     font-weight: 500;
     text-transform: uppercase;
@@ -4632,7 +4633,7 @@ font-family: 'Lato', sans-serif;
 
 .nk-ibox-1 .nk-ibox-text {
     margin-top: -1px;
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: .85rem;
     font-weight: 500;
     text-transform: uppercase;
@@ -4683,7 +4684,7 @@ font-family: 'Lato', sans-serif;
 
 /* Titles */
 .nk-ibox-title {
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: 1.25rem;
     letter-spacing: .04em;
 }
@@ -4814,7 +4815,7 @@ font-family: 'Lato', sans-serif;
 .nk-pagination .container > a {
     display: inline-block;
     padding: 19px;
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: .85rem;
     font-weight: 500;
     color: #171717;
@@ -4936,7 +4937,7 @@ font-family: 'Lato', sans-serif;
  ----------------------------*/
 blockquote {
     margin-bottom: 1.5rem;
-    font-family: "PT Sans", serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: 1.42rem;
     line-height: 1.4;
     color: #171717;
@@ -4946,7 +4947,7 @@ blockquote.nk-blockquote-style-1 {
     display: block;
     max-width: 715px;
     margin: 0 auto;
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     text-align: center;
     letter-spacing: .04em;
 }
@@ -5089,7 +5090,7 @@ blockquote.nk-blockquote-style-1 cite {
 .nk-carousel .nk-carousel-prev .nk-carousel-arrow-name,
 .nk-carousel .nk-carousel-next .nk-carousel-arrow-name {
     overflow: hidden;
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: 1.2rem;
     font-weight: 600;
     text-overflow: ellipsis;
@@ -5334,7 +5335,7 @@ font-family: 'Lato', sans-serif;
 .nk-carousel-3 .nk-carousel-prev .nk-carousel-arrow-name,
 .nk-carousel-3 .nk-carousel-next .nk-carousel-arrow-name {
     overflow: hidden;
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: 1.2rem;
     font-weight: 600;
     text-overflow: ellipsis;
@@ -6229,7 +6230,7 @@ a.active > .nk-icon-search::after {
 .nk-isotope-filter > li {
     display: inline-block;
     padding: 5px 15px;
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: .85rem;
     font-weight: 500;
     color: #000;
@@ -6302,7 +6303,7 @@ font-family: 'Lato', sans-serif;
 
 .nk-fullpage-portfolio .nk-fullpage-nav > li,
 .nk-fullpage-portfolio .nk-fullpage-item-category a {
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: .8rem;
     letter-spacing: .07em;
     opacity: .5;
@@ -6474,7 +6475,7 @@ font-family: 'Lato', sans-serif;
 }
 
 .nk-portfolio-list .nk-portfolio-item .portfolio-item-category {
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: .85rem;
     font-weight: 500;
     line-height: 1;
@@ -6707,7 +6708,7 @@ font-family: 'Lato', sans-serif;
 .nk-portfolio-launch-site {
     padding-top: 48px;
     padding-bottom: 54px;
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     text-align: center;
 }
 
@@ -6959,7 +6960,7 @@ font-family: 'Lato', sans-serif;
 }
 
 .nk-post-meta {
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: .76rem;
     font-weight: 500;
     color: #171717;
@@ -7059,7 +7060,7 @@ font-family: 'Lato', sans-serif;
     margin-right: -22px;
     margin-bottom: 3px;
     margin-left: -22px;
-font-family: 'Lato', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
 }
 
 .nk-comments .nk-comment .nk-comment-meta .nk-comment-name,
